--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,29 +1,25 @@
-[unix_http_server]
-file=/tmp/supervisor.sock   ; (the path to the socket file)
-
 [supervisord]
-logfile=/var/log/supervisord.log ; (main log file;default $CWD/supervisord.log)
-logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
-logfile_backups=10           ; (num of main logfile rotation backups;default 10)
-loglevel=info                ; (log level;default info; others: debug,warn,trace)
-pidfile=/tmp/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
-nodaemon=true               ; (start in foreground if true;default false)
-minfds=1024                  ; (min. avail startup file descriptors;default 1024)
-minprocs=200                 ; (min. avail process descriptors;default 200)
+logfile=/dev/null
+nodaemon=true
 
-[rpcinterface:supervisor]
-supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
-
-[supervisorctl]
-serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
-
-[program:apache2]
-command=bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -c 'ErrorLog /dev/stdout' -DFOREGROUND"
+[program:nginx]
+command=nginx -g "daemon off;"
 redirect_stderr=true
-stopasgroup=true
-killasgroup=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+
+[program:fastcgi-wrapper]
+command=/usr/local/bin/fastcgi-wrapper
+autostart=true
+autorestart=true
+user=root
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
 
 [program:backuppc]
 command=/usr/share/backuppc/bin/BackupPC
 redirect_stderr=true
 user=backuppc
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
